# tslmm

./: Ginv.mtx  HW4.ipynb  README.md  Z.mtx  pheno.txt  pyproject.toml  run.R  run.py  ts_blup.py
benchmarks/: .gitignore  README.md  bigger_pop.py  do_predictions.sh  linear_operators.py  matrix_sizes.py  matrix_sizes.tsv  one_pop.py  plot_matrix_sizes.py  plot_results.py  prediction.py  requirements.txt  run_prediction.py  tslmm  two_pop.py
benchmarks/pedigree/: .gitignore  pedigree_relatedness.py  requirements.txt  spatial-simulation-infer.py  spatial-simulation.py
cl-draft-algo/: .factorize_parallel.py.swp  T.mtx  Z.mtx  factorize_parallel.py  sim_matrices.py
notebooks/: aug_19.ipynb  edge_and_node.ipynb  edge_and_node_r.ipynb  example_tiny.ipynb  prediction_example.ipynb  tiny_example.py
notebooks/outputs/: geneticvalue.txt  phenovalue.txt
notebooks/outputs/edge/: Q.edge.mtx  T.edge.mtx  Z.edge.mtx
notebooks/outputs/node/: Q.node.mtx  Z.node.mtx
ste_draft/: .gitignore  benchmark_cg.py  benchmark_dual_cg.py  benchmark_edge_effects.py  benchmark_genetic_values.py  benchmark_likelihoods.py  benchmark_likelihoods_at_scale.py  benchmark_optimization.py  benchmark_reml.py  benchmark_trace_estimators.py  genetic_values.py  gradient_checks.py  likelihoods.py  linear_operators.py  optimization.py  plot_matrix_structure.py  test_linear_operators.py  trace_estimators.py
ste_draft/old/: cg_scaling.py  stochastic_gradient.py  xnystrace.py
tests/: __init__.py  test_split.py  test_tslmm.py
tsblup/: __init__.py  blup.py  cv.py  haseman_elston.py  linalg.py  linalg_unit.py  matrices.py  operations.py  pca.py  preconditioner.py  simulations.py
tslmm/: __init__.py  _version.py  cv.py  linalg.py  linalg_unit.py  matrices.py  pca_unit.py  simulations.py  templates.py  trace_estimators.py  tslmm.py  tspca.py
validation/: check_average_information.py  check_conjugate_gradient_preconditioning.py  check_genetic_values.py  check_gradient_descent.py  check_haseman_elston.py  check_stochastic_ai_gradient.py  check_stochastic_average_information.py  check_stochastic_gradient.py  check_trace_estimators.py
