[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsblup"
version = "0.0.1"
authors = [  # TODO
    { name="Hanbin Lee", email="something@somewhere.org" },
    { name="Nate Pope", email="natep@uoregon.edu" },
    { name="Peter Ralph", email="pr@uoregon.edu" },
    { name="Gregor Gorjanc", email="something@somewhere.org" },
]
description = "Linear mixed models from ancestral recombination graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "numba",
  "tskit",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tsblup"]
py-modules = ["__init__"]

